--- a/src/htdocs/css/DefaultListFormatter.css
+++ b/src/htdocs/css/DefaultListFormatter.css
@@ -1,24 +1,24 @@
 .listContent .depth {
   display:block;
   position:absolute;
-  bottom:5px;
-  right:5px;
+  bottom:8px;
+  right:16px;
   color:#666;
   font-size:.85em;
 }
 
 .listContent .time {
   display:block;
-  position:absolute;
-  bottom:5px;
+  position:relative;
   color:#666;
   font-size:.85em;
+  margin: 2px 0 0;
 }
 
 .listContent .mag {
-  width:40px;
-  height:40px;
-  line-height:40px;
+  width:50px;
+  height:50px;
+  line-height:50px;
   font-size:14px;
   text-align:center;
   position:absolute;
@@ -44,6 +44,7 @@
 
 .listContent .selected {
   background: #bff;
+  background: #D4FFFF;
 }
 
 .listContent .place {
@@ -51,6 +52,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   display:block;
+  font-size: 14px;
 }
 
 .listContent .bigger {
