--- a/src/htdocs/css/ListView.css
+++ b/src/htdocs/css/ListView.css
@@ -4,7 +4,7 @@
 	 * in the current data feed.
 	 */
 	background-color:#ddd;
-
+  font-size:12px;
 }
 
 .listview .downloads {
@@ -15,68 +15,67 @@
 	display: block;
 }
 
+.listView .nodata {
+    padding: 16px;
+    color:#900;
+}
+
 
 /**
  * LIST HEADER
  */
 
 .listHeader {
-    display:block;
-    font-size:12px;
-    margin:0; padding:8px;
-    border-bottom:1px solid #BBB;
-    box-shadow:0 2px 5px #CCC;
+  padding: 0 16px;
 }
 
-.listHeader h1,
-.listHeader .updated,
-.listHeader .showing {
-    display:block;
-    white-space:nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis;
+.listHeader .download {
+  display: block;
 }
-.listHeader h1 {
-    font-size:16px;
-    margin:0;
+
+.listHeader > ul.downloads {
+  margin: 16px 0;
 }
-.listHeader .updated,
-.listHeader .timezone {
-    color:#494949;
-    font-size:11px;
+
+.listHeader > .timezone,
+.listHeader > .updated {
+  display:none;
 }
-.listHeader .total {
-    padding-left:8px;
-    color:#000;
+
+.listHeader > span {
+  display:block;
+  color: #666;
 }
-.listHeader .showing {
-    display:none;
-    margin-top:8px;
+
+.listHeader > span > strong{
+  color: #333;
 }
-.filtered .listHeader .showing {
-    display:block;
+
+
+.listHeader > .total {
+  margin-top:8px;
 }
+
+.listHeader > .showing {
+  margin-bottom:8px;
+}
+
+
 
 /**
  * LIST CONTENT
  */
 
-.listView .nodata {
-    padding:0 8px;
-    font-size:14px;
-    color:#900;
-}
-.listContent,
-.listContent li {
+
+ol.listContent {
 	list-style:none;
-	margin:0;
 	padding:0;
+  border: 1px solid #bbb;
 }
 
-
-.listContent li {
+ol.listContent li {
 	position:relative;
-	border-bottom: 1px solid #DFDFDF;
+	border-top: 1px solid #DFDFDF;
 	background: #fff;
 
 	/*
@@ -86,78 +85,28 @@
 	-webkit-transform: translate3d(0,0,0);
 
 	/** bottom is room for time, depth; left is room for mag  */
-	padding:0.375em 0.375em 1.5em 3.2em;
+	padding: 8px 16px 8px 50px;
   color:#333;
-	font-size:.8em;
 	-webkit-text-size-adjust: none;
 }
+
+ol.listContent li:first-child {
+  border: 0;
+}
+
+.mode-list.mode-settings ol.listContent {
+  border-right: 1px solid #bbb;
+}
+
 
 /**
  * LIST FOOTER
  */
 
 .listFooter {
-    display:block;
-    margin:0; padding:0 8px 8px;
-    font-size:11px;
+  padding: 0 16px 16px;
 }
 
-.listFooter h5 {
-	margin:0 -8px;
-	padding:10px 5px;
-	font-size: 13px;
-}
-
-.listFooter .help {
-    margin:0;padding:0;
-    list-style:none;
-}
 .listFooter .help li {
-	margin:0;
-	padding:5px 0;
+  margin: 8px 0 0;
 }
-
-.listContent li.links ol#help > li a{
-	text-decoration: underline;
-}
-
-
-/** make list look like a table. */
-@media screen and (min-width:640px) {
-
-	.list .listContent li {
-		padding:0;
-		clear:left;
-		float:left;
-		width:100%;
-	}
-
-	.list .listContent .mag,
-	.list .listContent .place,
-	.list .listContent .time {
-		position:static;
-		top:auto;left:auto;right:auto;bottom:auto;
-		float:left;
-		line-height: inherit;
-		height:auto;
-		padding:5px;
-	}
-
-	.list .listContent .mag {
-		width:4%
-	}
-
-	.list .listContent .place {
-		width:48%;
-	}
-
-	.list .listContent .time {
-		width:25%;
-	}
-
-	.list .listContent .depth {
-		top:5px;
-		bottom:auto;
-	}
-}
-
