Create skeleton for DyfiListFormat

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,4 +1,6 @@
+
 @import '_LatestEarthquakes.scss';
+@import 'list/_DyfiListFormat.scss';
 @import 'summary/_EventSummaryFormat.scss';
 
 #latest-earthquakes {
