--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,5 +1,5 @@
-
 @import '_LatestEarthquakes.scss';
+@import 'list/_DefaultListFormat.scss';
 @import 'list/_DyfiListFormat.scss';
 @import 'summary/_EventSummaryFormat.scss';
 
